--- a/ex/bikcraft-basico/assets/css/style.css
+++ b/ex/bikcraft-basico/assets/css/style.css
@@ -1,15 +1,120 @@
 @charset "UTF-8";
 
-header {
+:root {
+  --cor-destaque: #ffbb00;
+  --cor-texto: #402B00;
+}
+
+* {
+  margin: 0px;
+}
+
+body {
+  display: grid;
+  gap: 60px;
+  justify-items: center;
+  margin-top: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f7f7f7;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  font-size: 20px;
+  line-height: 1.3;
+}
+
+.menu {
   display: flex;
-  place-content: center;
-  background-color: lightgreen;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
-div {
-  background-color: lightcoral;
+.menu a {
+  text-transform: uppercase;
+  background-color: white;
+  padding: 15px 30px;
+  border-radius: 4px;
+  color: black;
 }
 
-div img {
-  background-color: lightblue;
+.conteudo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
+}
+
+.intro {
+  display: grid;
+  align-content: center;
+  position: relative;
+  background-color: white;
+  padding: 40px;
+  text-align: right;
+  justify-items: end;
+  gap: 20px;
+}
+
+.detalhe {
+  position: absolute;
+  top: 30px;
+  right: -30px;
+  width: 60px;
+  height: 4px;
+  background-color: var(--cor-destaque);
+}
+
+.botao {
+  background-color: var(--cor-destaque);
+  color: var(--cor-texto);
+  padding: 15px 30px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.subtitulo {
+  font-size: 64px;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, .2);
+  text-align: right;
+  padding: 40px;
+  align-self: center;
+}
+
+.vantagens {
+  background-color: white;
+  padding: 40px;
+}
+
+.vantagens-item {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 10px 20px;
+  padding: 20px;
+}
+
+.vantagens-item p {
+  grid-column: 2;
+}
+
+footer {
+  text-align: center;
+  padding: 40px;
+  width: 100%;
+  background-color: white;
+  box-sizing: border-box;
+}
+
+.aaa {
+  color: black;
 }
