--- a/ex/bikcraft-basico/assets/css/style.css
+++ b/ex/bikcraft-basico/assets/css/style.css
@@ -2,11 +2,13 @@
 
 :root {
   --cor-destaque: #ffbb00;
-  --cor-texto: #402B00;
+  --cor-texto: #402b00;
 }
 
 * {
   margin: 0px;
+  padding: 0px;
+  list-style: none;
 }
 
 body {
@@ -28,8 +30,14 @@ a {
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
+}
+
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
 }
 
 .menu {
@@ -40,11 +48,19 @@ p {
 }
 
 .menu a {
+  display: block;
+  border-radius: 5px;
   text-transform: uppercase;
   background-color: white;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
   color: black;
+  border: 2px solid transparent;
+
+}
+
+.menu a:hover {
+  border-color: var(--cor-destaque);
 }
 
 .conteudo {
@@ -64,7 +80,12 @@ p {
   gap: 20px;
 }
 
-.detalhe {
+.intro h1 {
+  font-size: 2rem;
+}
+
+.intro::before {
+  content: "";
   position: absolute;
   top: 30px;
   right: -30px;
@@ -76,16 +97,21 @@ p {
 .botao {
   background-color: var(--cor-destaque);
   color: var(--cor-texto);
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
   text-transform: uppercase;
   font-weight: bold;
 }
 
+.botao:hover {
+  background-color: #e5a117;
+}
+
 .subtitulo {
-  font-size: 64px;
+  background-image: url(../img/onda.svg);
+  font-size: 4rem;
   text-transform: uppercase;
-  color: rgba(0, 0, 0, .2);
+  color: rgba(0, 0, 0, 0.2);
   text-align: right;
   padding: 40px;
   align-self: center;
@@ -97,14 +123,29 @@ p {
 }
 
 .vantagens-item {
+  position: relative;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
 }
 
+.vantagens-item:nth-child(odd) {
+  background-color: #f7f7f7;
+}
+
 .vantagens-item p {
   grid-column: 2;
+}
+
+.vantagens-item:hover::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: var(--cor-destaque);
+  width: 4px;
+  height: 100%;
 }
 
 footer {
@@ -113,8 +154,4 @@ footer {
   width: 100%;
   background-color: white;
   box-sizing: border-box;
-}
-
-.aaa {
-  color: black;
 }
