--- a/ex/bikcraft-basico/assets/css/style.css
+++ b/ex/bikcraft-basico/assets/css/style.css
@@ -178,9 +178,14 @@ footer {
   .header {
     gap: 30px;
   }
-  
+
   .conteudo {
     grid-template-columns: 1fr;
+  }
+
+  .botao {
+    padding: 0.75rem 1rem;
+    font-size: 0.75rem;
   }
 
   .intro {
