--- a/ex/bikcraft-basico/assets/css/style.css
+++ b/ex/bikcraft-basico/assets/css/style.css
@@ -2,7 +2,23 @@
 
 :root {
   --cor-destaque: #ffbb00;
+  --cor-destaque-hover: #e5a117;
   --cor-texto: #402b00;
+  --fundo-1: #f7f7f7;
+  --fundo-2: white;
+  --texto: black;
+  --subtitulo: rgba(0, 0, 0, 0.2);
+  --onda: url(../img/onda-clara.svg);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --fundo-1: #111;
+    --fundo-2: black;
+    --texto: white;
+    --subtitulo: rgba(255, 255, 255, 0.2);
+    --onda: url(../img/onda-escura.svg);
+  }
 }
 
 * {
@@ -17,7 +33,8 @@ body {
   justify-items: center;
   margin-top: 60px;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f7f7f7;
+  background-color: var(--fundo-1);
+  color: var(--texto);
 }
 
 img {
@@ -51,10 +68,10 @@ p {
   display: block;
   border-radius: 5px;
   text-transform: uppercase;
-  background-color: white;
+  background-color: var(--fundo-2);
   padding: 1rem 2rem;
   border-radius: 4px;
-  color: black;
+  color: var(--texto);
   border: 2px solid transparent;
 }
 
@@ -72,7 +89,7 @@ p {
   display: grid;
   align-content: center;
   position: relative;
-  background-color: white;
+  background-color: var(--fundo-2);
   padding: 40px;
   text-align: right;
   justify-items: end;
@@ -108,21 +125,21 @@ p {
 }
 
 .botao:hover {
-  background-color: #e5a117;
+  background-color: var(--cor-destaque-hover);
 }
 
 .subtitulo {
-  background-image: url(../img/onda.svg);
+  background-image: var(--onda);
   font-size: 4rem;
   text-transform: uppercase;
-  color: rgba(0, 0, 0, 0.2);
+  color: var(--subtitulo);
   text-align: right;
   padding: 40px;
   align-self: center;
 }
 
 .vantagens {
-  background-color: white;
+  background-color: var(--fundo-2);
   padding: 40px;
 }
 
@@ -135,7 +152,7 @@ p {
 }
 
 .vantagens-item:nth-child(odd) {
-  background-color: #f7f7f7;
+  background-color: var(--fundo-1);
 }
 
 .vantagens-item p {
@@ -156,7 +173,7 @@ footer {
   text-align: center;
   padding: 40px;
   width: 100%;
-  background-color: white;
+  background-color: var(--fundo-2);
   box-sizing: border-box;
 }
 
